--- a/lab-7/index.html
+++ b/lab-7/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1>Welcome to the Mad Lib Adventure!</h1>
-    <form id="madLibForm" action="/ITC505/lab-7/index.html" method="POST">
+    <form id="madLibForm" action="https://itc505-n0kh.onrender.com" method="POST">
       <label for="name">Enter a Name:</label>
       <input type="text" id="name" name="name" required>
 
